--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,13 @@ nav li {
     border-bottom: 0.2rem solid black;
 }
 
+/* Media query for mobile devices */
+@media screen and (max-width: 560px) {
+    .navigation {
+        font-size: 0.7rem;
+    }
+}
+
 main {
     display: block;
     position: relative;
@@ -153,4 +160,32 @@ main {
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
     word-spacing: 0.1rem;
+}
+
+/* Contact page styling */
+
+
+.contact-info {
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    top: 4rem;
+}
+
+.contact-info ul {
+    position: relative;
+    top: 2rem;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.contact-info li {
+    display: inline-block;
+    margin-right: 5rem;
+}
+
+.social-icons a {
+    font-size: 3rem;
+    color: #291c5a;
 }
